--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -77,7 +77,7 @@
           alt="placeholder img0"
           id="placeholder img0"
           title="gray box, 50x50 base"
-          class="img-flex"> 
+          class="img-flex scale scale-no-hover"> 
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ut ipsum cum, cumque earum aspernatur, debitis, in rem animi magni modi cupiditate neque unde excepturi veniam quaerat sapiente dolorum impedit?</p>
           <div class="border link-menu-772 text-center align-itmes-end">
             <a href="#menu">back to top</a>
@@ -88,7 +88,7 @@
           alt="placeholder img1"
           id="placeholder img1"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequatur ratione deleniti. Fugiat atque fuga, ipsa, suscipit ratione ut consequatur officia, dolor neque dicta amet libero corporis dolore reprehenderit eos?</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -99,7 +99,7 @@
           alt="placeholder img2"
           id="placeholder img2"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, corporis? Porro asperiores iusto, deserunt ducimus nobis fugiat aspernatur, et assumenda voluptates nisi vitae debitis maxime deleniti ut, ratione consequatur molestias?</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -110,7 +110,7 @@
           alt="placeholder img3"
           id="placeholder img3"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, animi illo. Porro ea odio itaque dolores ab recusandae dignissimos commodi incidunt libero quisquam omnis, dolor, illo similique excepturi magnam autem!</p>
           <div class="border link-menu-772 text-center margin-bottom">
             <a href="#menu">back to top</a>
@@ -121,7 +121,7 @@
           alt="placeholder img4"
           id="placeholder img4"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque porro ab nobis vel saepe, maiores perspiciatis qui a temporibus tenetur quibusdam. Quam, placeat cumque. Atque porro aliquid quaerat aperiam ex?</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -132,7 +132,7 @@
           alt="placeholder img5"
           id="placeholder img5"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium animi quisquam labore ad laboriosam nostrum, ullam, quidem repellat maiores non, dicta tenetur earum minima? Voluptates suscipit quod qui laudantium sapiente?</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -143,7 +143,7 @@
           alt="placeholder img6"
           id="placeholder img6"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint veritatis excepturi cumque iste, veniam incidunt vel tempore non expedita qui consectetur animi vero laboriosam. Iusto hic ex nulla iste vitae.</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -154,7 +154,7 @@
           alt="placeholder img7"
           id="placeholder img7"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab labore odit qui, nobis debitis consequatur corrupti voluptate temporibus, laudantium, provident magnam blanditiis aperiam incidunt nihil atque. Mollitia itaque assumenda ab.</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -165,7 +165,7 @@
           alt="placeholder img8"
           id="placeholder img8"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis exercitationem perspiciatis at. Aliquam hic, atque dicta cumque numquam expedita provident nemo repellat architecto, mollitia ex aspernatur amet ratione esse officia.</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
@@ -176,7 +176,7 @@
           alt="placeholder img9"
           id="placeholder img9"
           title="gray box, 50x50 base"
-          class="img-flex">
+          class="img-flex scale scale-no-hover">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam est temporibus id magnam animi. Non suscipit tempora labore atque odio, facilis temporibus fuga nesciunt ratione eius pariatur nobis in.</p>
           <div class="border link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
