--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -15,50 +15,60 @@
   </head>
   <body>
     <!-- Page -->
-    <div class="container-fluid d-flex flex-column">
-      <!-- Header -->
-      <header
-        class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20"
+    <!-- <div class="container-fluid d-flex flex-column"> -->
+    <!-- Header -->
+    <header
+      class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+    >
+      <div
+        class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
       >
-        <div
-          class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
-        >
-          <h1 class="text-wrap text-center align-middle">House of Junk</h1>
-        </div>
-        <div
-          class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
-        >
-          <img
-            src="https://via.placeholder.com/150"
-            alt="placeholder header"
-            id="placeholder header"
-            title="gray box, 150x150 base"
-            style="display: block"
-            class="img-fluid text-wrap text-center align-middle"
-          />
-        </div>
-      </header>
+        <h1 class="text-wrap text-center align-middle">House of Junk</h1>
+      </div>
+      <div
+        class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
+      >
+        <img
+          src="https://via.placeholder.com/150"
+          alt="placeholder header"
+          id="placeholder header"
+          title="gray box, 150x150 base"
+          style="display: block"
+          class="img-fluid text-wrap text-center align-middle"
+        />
+      </div>
+    </header>
     <!-- Nav -->
-      <div class="container-fluid d-flex justify-content-evenly border">
-        <nav class="navbar navbar-expand">
-          <div class="container">
-          
-            <div class="collapse navbar-collapse" id="navbarAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link text-wrap text-center"  href="./index.html">Home</a>
-                <a class="nav-link text-wrap text-cente nav-current-page-color" aria-current="page" href="#">For Sale</a>
-                <a class="nav-link text-wrap text-center" href="./contact.html"
-                  >Contact Us</a
-                >
-              </div>
+    <div class="container-fluid d-flex justify-content-evenly border">
+      <nav class="navbar navbar-expand">
+        <div class="container">
+          <div class="collapse navbar-collapse" id="navbarAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link text-wrap text-center" href="./index.html"
+                >Home</a
+              >
+              <a
+                class="nav-link text-wrap text-cente nav-current-page-color"
+                aria-current="page"
+                href="#"
+                >For Sale</a
+              >
+              <a class="nav-link text-wrap text-center" href="./contact.html"
+                >Contact Us</a
+              >
             </div>
           </div>
-        </nav>
-      </div>
+        </div>
+      </nav>
+    </div>
     <!-- Body -->
     <div class="border container-fluid d-flex flex-direction-772-column">
       <!-- Menu -->
-      <div id="menu" class="border d-flex flex-column text-center" style="min-width: 150px;">
+      <div
+        id="menu"
+        class="border d-flex flex-column text-center"
+        style="min-width: 150px"
+      >
         <a href="#item0">Item 0</a>
         <a href="#item1">Item 1</a>
         <a href="#item2">Item 2</a>
@@ -68,126 +78,201 @@
         <a href="#item6">Item 6</a>
         <a href="#item7">Item 7</a>
         <a href="#item8">Item 8</a>
-        <a href="#item9">Item 9</a>    
+        <a href="#item9">Item 9</a>
       </div>
       <!-- Item List -->
       <div class="border d-flex flex-row flex-wrap flex-direction-772-column">
-        <div id="item0" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img0"
-          id="placeholder img0"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover"> 
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ut ipsum cum, cumque earum aspernatur, debitis, in rem animi magni modi cupiditate neque unde excepturi veniam quaerat sapiente dolorum impedit?</p>
-          <div class="border link-menu-772 text-center align-itmes-end">
+        <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img0"
+            id="placeholder img0"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+            ut ipsum cum, cumque earum aspernatur, debitis, in rem animi magni
+            modi cupiditate neque unde excepturi veniam quaerat sapiente dolorum
+            impedit?
+          </p>
+          <div class="link-menu-772 text-center align-itmes-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item1" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img1"
-          id="placeholder img1"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequatur ratione deleniti. Fugiat atque fuga, ipsa, suscipit ratione ut consequatur officia, dolor neque dicta amet libero corporis dolore reprehenderit eos?</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item1" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img1"
+            id="placeholder img1"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+            consequatur ratione deleniti. Fugiat atque fuga, ipsa, suscipit
+            ratione ut consequatur officia, dolor neque dicta amet libero
+            corporis dolore reprehenderit eos?
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item2" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img2"
-          id="placeholder img2"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, corporis? Porro asperiores iusto, deserunt ducimus nobis fugiat aspernatur, et assumenda voluptates nisi vitae debitis maxime deleniti ut, ratione consequatur molestias?</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item2" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img2"
+            id="placeholder img2"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Voluptatem, corporis? Porro asperiores iusto, deserunt ducimus nobis
+            fugiat aspernatur, et assumenda voluptates nisi vitae debitis maxime
+            deleniti ut, ratione consequatur molestias?
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item3" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img3"
-          id="placeholder img3"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, animi illo. Porro ea odio itaque dolores ab recusandae dignissimos commodi incidunt libero quisquam omnis, dolor, illo similique excepturi magnam autem!</p>
-          <div class="border link-menu-772 text-center margin-bottom">
+        <div id="item3" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img3"
+            id="placeholder img3"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, animi
+            illo. Porro ea odio itaque dolores ab recusandae dignissimos commodi
+            incidunt libero quisquam omnis, dolor, illo similique excepturi
+            magnam autem!
+          </p>
+          <div class="link-menu-772 text-center margin-bottom">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item4" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img4"
-          id="placeholder img4"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque porro ab nobis vel saepe, maiores perspiciatis qui a temporibus tenetur quibusdam. Quam, placeat cumque. Atque porro aliquid quaerat aperiam ex?</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item4" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img4"
+            id="placeholder img4"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque porro
+            ab nobis vel saepe, maiores perspiciatis qui a temporibus tenetur
+            quibusdam. Quam, placeat cumque. Atque porro aliquid quaerat aperiam
+            ex?
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item5" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img5"
-          id="placeholder img5"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium animi quisquam labore ad laboriosam nostrum, ullam, quidem repellat maiores non, dicta tenetur earum minima? Voluptates suscipit quod qui laudantium sapiente?</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item5" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img5"
+            id="placeholder img5"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            animi quisquam labore ad laboriosam nostrum, ullam, quidem repellat
+            maiores non, dicta tenetur earum minima? Voluptates suscipit quod
+            qui laudantium sapiente?
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item6" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img6"
-          id="placeholder img6"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint veritatis excepturi cumque iste, veniam incidunt vel tempore non expedita qui consectetur animi vero laboriosam. Iusto hic ex nulla iste vitae.</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item6" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img6"
+            id="placeholder img6"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint
+            veritatis excepturi cumque iste, veniam incidunt vel tempore non
+            expedita qui consectetur animi vero laboriosam. Iusto hic ex nulla
+            iste vitae.
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item7" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img7"
-          id="placeholder img7"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab labore odit qui, nobis debitis consequatur corrupti voluptate temporibus, laudantium, provident magnam blanditiis aperiam incidunt nihil atque. Mollitia itaque assumenda ab.</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item7" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img7"
+            id="placeholder img7"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab labore
+            odit qui, nobis debitis consequatur corrupti voluptate temporibus,
+            laudantium, provident magnam blanditiis aperiam incidunt nihil
+            atque. Mollitia itaque assumenda ab.
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item8" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img8"
-          id="placeholder img8"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis exercitationem perspiciatis at. Aliquam hic, atque dicta cumque numquam expedita provident nemo repellat architecto, mollitia ex aspernatur amet ratione esse officia.</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item8" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img8"
+            id="placeholder img8"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+            exercitationem perspiciatis at. Aliquam hic, atque dicta cumque
+            numquam expedita provident nemo repellat architecto, mollitia ex
+            aspernatur amet ratione esse officia.
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
-        <div id="item9" class="border d-flex flex-basis-50 flex-direction-772-column">
-          <img src="https://via.placeholder.com/50"
-          alt="placeholder img9"
-          id="placeholder img9"
-          title="gray box, 50x50 base"
-          class="img-flex scale scale-no-hover">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam est temporibus id magnam animi. Non suscipit tempora labore atque odio, facilis temporibus fuga nesciunt ratione eius pariatur nobis in.</p>
-          <div class="border link-menu-772 text-center align-items-end">
+        <div id="item9" class="d-flex flex-basis-50 flex-direction-772-column">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder img9"
+            id="placeholder img9"
+            title="gray box, 50x50 base"
+            class="img-flex scale scale-no-hover"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+            quibusdam est temporibus id magnam animi. Non suscipit tempora
+            labore atque odio, facilis temporibus fuga nesciunt ratione eius
+            pariatur nobis in.
+          </p>
+          <div class="link-menu-772 text-center align-items-end">
             <a href="#menu">back to top</a>
           </div>
         </div>
       </div>
     </div>
     <!-- Footer -->
-    <br>
-    <footer class="border d-flex flex-row justify-content-evenly" style="max-height: 80px;">
-      <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+    <br />
+    <footer
+      class="border d-flex flex-row justify-content-evenly align-items-center"
+      style="max-height: 80px"
+    >
+      <div
+        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
+      >
         <img
           src="https://via.placeholder.com/50"
           alt="placeholder footer 1"
@@ -197,10 +282,14 @@
           class="img-fluid text-wrap text-center align-middle"
         />
       </div>
-      <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
-        <h4 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
+      <div
+        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
+      >
+        <h4 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h4>
       </div>
-      <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+      <div
+        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
+      >
         <img
           src="https://via.placeholder.com/50"
           alt="placeholder footer 2"
