--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <!-- Page -->
-    <div class="container-fluid d-flex flex-column">
+    <!-- <div class="container-fluid d-flex flex-column"> -->
       <!-- Header -->
       <header
-        class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20"
+        class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
       >
         <div
           class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
@@ -59,7 +59,7 @@
           </div>
         </nav>
       </div>
-      <br>
+      
       <!-- Body -->
       <div class="border container-fluid d-flex flex-direction-772-column">
         <!-- Main -->
@@ -83,9 +83,10 @@
            <div class="border flex-basis-20">side content word word word word </div>
           <div class="border flex-basis-20">side content word word word word word </div>
         </div>
-      </div> 
+      </div>
+      <br> 
       <!-- Footer -->
-      <footer class="border d-flex flex-row justify-content-evenly" style="max-height: 80px;">
+      <footer class="border d-flex flex-row justify-content-evenly align-items-center" style="max-height: 80px;">
         <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
           <img
             src="https://via.placeholder.com/50"
