comment box sizing, comment form funtionality

--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -83,17 +83,20 @@
           <label for="email">Email:</label>
           <input type="email" id="emial" placeholder="yourname@email.com" />
         </div>
-        <div class="border">
+        <div class="border d-flex textbox-size">
           <!-- comment box -->
-          <label for="comment">Comment</label>
-          <input
-            class="textbox-size"
+          <textarea
+            style="flex-basis: 100%"
             type="text"
             id="comment"
-            placeholder="Type here.."
-          />
+            placeholder="Comment"
+            rows="5"
+          ></textarea>
         </div>
-        <div class="border">
+        <div
+          class="border text-wrap text-center d-flex justify-content-evenly flex-direction-772-column"
+          style="min-width: 50%"
+        >
           <!-- 3 radio select -->
           <label for="complaint">Complaint:</label>
           <input
