font import and assign, back to top goes to top

--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Michroma&family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,7 +24,7 @@
     <!-- <div class="container-fluid d-flex flex-column"> -->
     <!-- Header -->
     <header
-      class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+      class="font-mich border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
     >
       <div
         class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
@@ -62,7 +68,7 @@
       </nav>
     </div>
     <!-- Main Body -->
-    <div class="container border" style="height: 100%">
+    <div class="font-quicksand container border" style="height: 100%">
       <!-- Comment container -->
       <div
         class="border container d-flex flex-column align-items-center flex-comment-form"
@@ -129,7 +135,7 @@
     <!-- Footer -->
     <br />
     <footer
-      class="border d-flex flex-row justify-content-evenly align-items-center"
+      class="font-mich border d-flex flex-row justify-content-evenly align-items-center"
       style="max-height: 80px"
     >
       <div
@@ -147,7 +153,7 @@
       <div
         class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
       >
-        <h4 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h4>
+        <h5 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h5>
       </div>
       <div
         class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
