--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Michroma&family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,7 +24,8 @@
     <!-- <div class="container-fluid d-flex flex-column"> -->
     <!-- Header -->
     <header
-      class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+      class="font-mich border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+      id="header"
     >
       <div
         class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
@@ -66,7 +73,7 @@
       <!-- Menu -->
       <div
         id="menu"
-        class="border d-flex flex-column text-center"
+        class="font-abel border d-flex flex-column text-center"
         style="min-width: 150px"
       >
         <a href="#item0">Item 0</a>
@@ -81,7 +88,9 @@
         <a href="#item9">Item 9</a>
       </div>
       <!-- Item List -->
-      <div class="border d-flex flex-row flex-wrap flex-direction-772-column">
+      <div
+        class="font-qucksand border d-flex flex-row flex-wrap flex-direction-772-column"
+      >
         <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column">
           <img
             src="https://via.placeholder.com/50"
@@ -89,6 +98,7 @@
             id="placeholder img0"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -97,7 +107,7 @@
             impedit?
           </p>
           <div class="link-menu-772 text-center align-itmes-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item1" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -107,6 +117,7 @@
             id="placeholder img1"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
@@ -115,7 +126,7 @@
             corporis dolore reprehenderit eos?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item2" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -125,6 +136,7 @@
             id="placeholder img2"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -133,7 +145,7 @@
             deleniti ut, ratione consequatur molestias?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item3" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -143,6 +155,7 @@
             id="placeholder img3"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, animi
@@ -151,7 +164,7 @@
             magnam autem!
           </p>
           <div class="link-menu-772 text-center margin-bottom">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item4" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -161,6 +174,7 @@
             id="placeholder img4"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque porro
@@ -169,7 +183,7 @@
             ex?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item5" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -179,6 +193,7 @@
             id="placeholder img5"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
@@ -187,7 +202,7 @@
             qui laudantium sapiente?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item6" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -197,6 +212,7 @@
             id="placeholder img6"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint
@@ -205,7 +221,7 @@
             iste vitae.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item7" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -215,6 +231,7 @@
             id="placeholder img7"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab labore
@@ -223,7 +240,7 @@
             atque. Mollitia itaque assumenda ab.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item8" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -233,6 +250,7 @@
             id="placeholder img8"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -241,7 +259,7 @@
             aspernatur amet ratione esse officia.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
         <div id="item9" class="d-flex flex-basis-50 flex-direction-772-column">
@@ -251,6 +269,7 @@
             id="placeholder img9"
             title="gray box, 50x50 base"
             class="img-flex scale scale-no-hover"
+            style="margin-right: 4px"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
@@ -259,7 +278,7 @@
             pariatur nobis in.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#menu">back to top</a>
+            <a href="#header">back to top</a>
           </div>
         </div>
       </div>
@@ -267,7 +286,7 @@
     <!-- Footer -->
     <br />
     <footer
-      class="border d-flex flex-row justify-content-evenly align-items-center"
+      class="font-mich border d-flex flex-row justify-content-evenly align-items-center"
       style="max-height: 80px"
     >
       <div
@@ -285,7 +304,7 @@
       <div
         class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
       >
-        <h4 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h4>
+        <h5 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h5>
       </div>
       <div
         class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
