--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Michroma&family=Quicksand&display=swap" rel="stylesheet">    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
@@ -18,7 +20,7 @@
     <!-- <div class="container-fluid d-flex flex-column"> -->
       <!-- Header -->
       <header
-        class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+        class="font-mich border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
       >
         <div
           class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
@@ -63,7 +65,7 @@
       <!-- Body -->
       <div class="border container-fluid d-flex flex-direction-772-column">
         <!-- Main -->
-        <div class="border container d-flex flex-row flex-wrap flex-basis-66 justify-content-evenly text-center">
+        <div class="font-quicksand border container d-flex flex-row flex-wrap flex-basis-66 justify-content-evenly text-center">
           <div class="border flex-basis-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, provident fuga! Reiciendis quam tenetur amet suscipit accusamus dolores maxime adipisci corporis nulla praesentium nihil officia distinctio labore consequuntur, similique temporibus?</div>
           <div class="border flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum praesentium at veniam iste, culpa nam molestias ullam obcaecati architecto mollitia itaque quod voluptas maxime nemo velit quo. Laboriosam, molestiae eius.</div>
           <div class="border flex-basis-20">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti reiciendis hic qui exercitationem. Temporibus, laudantium aperiam? Ut nesciunt consequuntur quisquam blanditiis obcaecati pariatur ab omnis. Exercitationem tempore sit veniam nesciunt!</div>
@@ -76,7 +78,7 @@
           <div class="border flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iusto, fugiat aut obcaecati laboriosam quaerat odio perspiciatis, iure reprehenderit, nulla vel quo labore tenetur soluta cupiditate officia! Eaque, quasi tempora.</div>
         </div>
         <!-- Side -->
-        <div class="border container d-flex flex-column flex-basis-33 justify-content-evenly text-center">
+        <div class="font-abel border container d-flex flex-column flex-basis-33 justify-content-evenly text-center">
           <div class="border flex-basis-20">side content word </div>
              <div class="border flex-basis-20">side content word word </div>
             <div class="border flex-basis-20">side content word word word </div>
@@ -86,7 +88,7 @@
       </div>
       <br> 
       <!-- Footer -->
-      <footer class="border d-flex flex-row justify-content-evenly align-items-center" style="max-height: 80px;">
+      <footer class="font-mich border d-flex flex-row justify-content-evenly align-items-center" style="max-height: 80px;">
         <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
           <img
             src="https://via.placeholder.com/50"
@@ -98,7 +100,7 @@
           />
         </div>
         <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
-          <h4 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
+          <h5 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
         </div>
         <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
           <img
